--- a/angular.json
+++ b/angular.json
@@ -34,9 +34,9 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/rose-red.css",
               "src/styles.scss",
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
-
             ],
             "scripts": [
                "node_modules/@fortawesome/fontawesome-free/js/all.min.js"
@@ -103,6 +103,7 @@
               }
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/rose-red.css",
               "src/styles.scss"
             ],
             "scripts": []
